--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   "author": "Sumedh D",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^8.0.5",
+    "babel-preset-env": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.3",
+    "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "jquery": "^3.4.0"
   }
 }
